# grimoire

./: .gitattributes  .gitignore  .graphify_ast.json  .graphify_chunks.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  .graphifyignore  .impeccable.md  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  components.json  flow.md  package.json  skills-lock.json  vitest.config.ts
.claude/: gsd-file-manifest.json  launch.json  settings.json  settings.local.json
.impeccable/: design.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.sandcastle/: Dockerfile  main.ts
docs/: design-system.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-03-16-021255-0000_create_notes/: up.sql
src-tauri/migrations/2026-03-17-043635-0000_create_maps/: up.sql
src-tauri/migrations/2026-03-17-043635-0001_create_pin_categories/: down.sql  up.sql
src-tauri/migrations/2026-03-17-043635-0002_create_pins/: up.sql
src-tauri/migrations/2026-03-18-000000-0000_create_scenes/: down.sql  up.sql
src-tauri/migrations/2026-03-18-000000-0001_create_scene_slots/: down.sql  up.sql
src-tauri/migrations/2026-03-18-000000-0002_create_spotify_auth/: down.sql  up.sql
src-tauri/migrations/2026-03-20-000000-0000_add_shuffle_to_scene_slots/: down.sql  up.sql
src-tauri/migrations/2026-03-22-210050-0000_add_favorited_to_scenes/: down.sql  up.sql
src-tauri/migrations/2026-03-27-000000-0000_add_shape_to_pin_categories/: down.sql  up.sql
src-tauri/migrations/2026-03-27-000000-0001_add_appearance_to_pins/: down.sql  up.sql
src-tauri/migrations/2026-04-17-000000-0000_make_map_image_nullable/: down.sql  up.sql
src-tauri/migrations/2026-04-17-000001-0000_repair_pin_fk_references/: down.sql  up.sql
src-tauri/migrations/2026-04-22-000000-0000_create_map_annotations/: down.sql  up.sql
src-tauri/migrations/2026-04-28-000000-0000_fix_boolean_columns/: down.sql  up.sql
src-tauri/migrations/2026-05-11-000000-0000_add_thumbnail_to_scenes/: down.sql  up.sql
src-tauri/migrations/2026-05-18-000000-0000_create_note_tags/: up.sql
src-tauri/migrations/2026-05-19-000000-0000_create_pin_tags/: down.sql  up.sql
src-tauri/migrations/2026-05-19-000001-0000_create_recent_entities/: down.sql  up.sql
src-tauri/migrations/2026-05-27-000000-0000_create_note_links/: up.sql
src-tauri/migrations/2026-05-27-000001-0000_create_note_aliases/: down.sql  up.sql
src-tauri/migrations/2026-05-27-000002-0000_create_tag_graph_styles/: down.sql  up.sql
src-tauri/migrations/2026-06-23-000000-0000_create_pdf_scene_links/: down.sql  up.sql
src-tauri/sample-world/: Mira Ashvale.md  Start Here.md  The Ashfen Chronicle.md  The Ember Keep.md
src-tauri/sample-world/Characters/: Aldric Vane.md  Mira Ashvale.md
src-tauri/sample-world/Encounters/: The Shadow in the Hall.md
src-tauri/sample-world/Locations/: The Ember Keep.md  Thornhaven Village.md
src-tauri/sample-world/Lore/: The Ashfen Marshes.md  The War of Embers.md
src-tauri/sample-world/Sessions/: Session 1 — The Arrival.md
src-tauri/src/: ledger.rs  ledger_watch.rs  lib.rs  note_index.rs  note_mutation.rs  note_write.rs  search.rs  vault.rs
src-tauri/src/commands/: app_prefs.rs  frontmatter.rs  graph.rs  graph_styles.rs  import.rs  ledger.rs  links.rs  maps.rs  media.rs  mod.rs  notes.rs  pdf_scene_links.rs  preferences.rs  recent.rs  recent_ledgers.rs  recent_vaults.rs  sample.rs  scenes.rs  spotify.rs  tags.rs  templates.rs  tree.rs  vault.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
(+411 files in other folders)
