[package]
name = "grimoire"
version = "0.1.0"
description = "A local-first desktop app for tabletop RPG worldbuilders to manage lore, NPCs, maps, and ambient audio scenes."
authors = ["Aaron Lamont"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grimoire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["time"] }
tantivy = "0.22"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-window-state = "2.4.1"

# Windows-only: lets us reach into the WebView2 controller to disable the
# native pinch-zoom gesture so touchpad pinch reaches the page as ctrl+wheel
# (see `disable_webview_pinch_zoom`). Pinned to the versions Tauri already
# locks transitively so no extra crate copy is compiled.
[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "=0.38.2"
windows = "=0.61.3"

[dev-dependencies]
tempfile = "3"
